# rustywolf

./: Cargo.toml  log.txt
res/: settings.ron
res/localisation/: en_GB.ron
res/maps/test_map_1/: layout.ron
res/maps/test_map_2/: layout.ron  sheet.ron
res/maps/test_map_2/sprites/: oldman.ron
src/: localisation.rs  main.rs  player.rs  settings.rs  sprites.rs  vector.rs  world.rs
src/engine/: mod.rs  player.rs  settings.rs  sprites.rs  vector.rs  world.rs
src/engine/sprites/: mod.rs  sprite.rs  spriteasset.rs  spriteregistry.rs  tilesheet.rs
src/engine/util/: math.rs  mod.rs  vector.rs
src/gpu/: debug.rs  framebuffer.rs  mod.rs  shader.rs  ssbo.rs  texturesampler.rs
src/shader/ceiling_floor/: compute.glsl  preprocess.glsl
src/shader/sprites/: compute.glsl  preprocess.glsl
src/shader/walls/: compute.glsl  preprocess.glsl
