[package]
name = "raster"
version = "0.1.0"
authors = ["cherrysrc <50867655+cherrysrc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.41.0"
image = "0.23.14"
ron = "0.6.4"